# WEMU

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  WEMU  all_files_with_paths.txt  beta_test_plan.md  setup.sh
.github/ISSUE_TEMPLATE/: isa-instruction.md  isa-instruction.yml
.github/workflows/: mirroring.yml  validate-merge-branch.yml  wemu-checks.yml
BE-elfanalyzer/: Makefile
BE-elfanalyzer/include/: my_powerpc.h  my_utils.h
BE-elfanalyzer/src/: main.c  (+1 more)
core/: .clang-format  .clang-tidy  .clang-uml  CMakeLists.txt
core/include/: elf.h
core/src/: coreDummy.cpp  main.cpp
core/src/binary/: Binary.hpp  BinaryException.hpp  Loader.cpp  Loader.hpp
core/src/cpu/decoder/: EncodedInstruction.hpp
core/src/cpu/instructions/: Add.cpp  Branch.cpp  BranchExtra.cpp  Cmp.cpp  Div.cpp  Logic.cpp  Logical.cpp  Memory.cpp  Mul.cpp  Neg.cpp  Or.cpp  Sc.cpp  Spr.cpp  Sub.cpp
core/src/cpu/instructions/Load/: Load.cpp
core/src/cpu/instructions/arithmetic/: Add.cpp  Div.cpp  Mul.cpp  Neg.cpp  Sub.cpp
core/src/cpu/instructions/float/: FloatCompare.cpp  FloatConvert.cpp  FloatLoad.cpp  FloatMove.cpp  FloatStore.cpp
core/src/cpu/instructions/load/: Load.cpp
core/src/cpu/instructions/logical/: And.cpp  Cnt.cpp  Ext.cpp  Or.cpp  Xor.cpp
core/src/cpu/instructions/rotateshift/: Shift.cpp
core/src/cpu/instructions/shift/: Extend.cpp  Rotate.cpp  Shift.cpp
core/src/cpu/instructions/spr/: Cache.cpp  Spr.cpp
core/src/cpu/instructions/store/: Store.cpp
core/src/cpu/interpreter/: Interpreter.cpp  Interpreter.hpp  Registers.hpp  SyscallHandler.hpp
core/src/cpu/memory/: Memory.hpp
core/src/cpu/tables/: cpu_fields.anh  cpu_instructions.anh
core/src/cpu/types/: EncodedInstruction.hpp  Field.hpp  Instruction.hpp  InstructionID.hpp  InstructionInfo.hpp
core/src/exception/: Exception.cpp  Exception.hpp
core/src/gfx/: Renderer.cpp  Renderer.hpp  RendererVulkan.cpp  RendererVulkan.hpp
core/src/gfx/headers/: stb_image.h  utils.hpp  vertex.hpp
core/src/gfx/init/: buffer.cpp  cleanup.cpp  commandPool.cpp  descriptor.cpp  flipTv.cpp  framebuffers.cpp  image.cpp  instance.cpp  logicalDevice.cpp  pick.cpp  semaphoreAndFence.cpp  shader.cpp  surface.cpp  swapChain.cpp  update.cpp  window.cpp
core/src/hle/: Coreinit.cpp  Coreinit.hpp  Libc.cpp  Libc.hpp  StdlibHooks.cpp  StdlibHooks.hpp  Whb.cpp  Whb.hpp
core/src/interpreter/: Instruction.hpp  Interpreter.cpp  Interpreter.hpp  cpu_fields.anh  cpu_instructions.anh  interpreter.h
core/src/interpreter/instructions/definitions/: Field.hpp  Instruction.hpp
core/src/interpreter/instructions/operations/: Add.cpp
core/src/lib/coreinit/: Coreinint.hpp  OsCache.hpp  OsMemory.hpp  OsScreen.hpp  OsSystem.hpp
core/src/utils/: BeDecoder.cpp  BeDecoder.hpp  EmulatorCounter.hpp  EmulatorState.hpp  Loader.cpp  Loader.hpp  Logger.hpp
core/tests/: CMakeLists.txt  TestFixture.cpp  TestFixture.hpp  test_add.cpp  test_branch.cpp  test_memory.cpp  test_sc.cpp
core/tests/arithmetic/: test_add.cpp  test_addc.cpp  test_adde.cpp  test_addi.cpp  test_addic.cpp  test_addme.cpp  test_addze.cpp  test_divw.cpp  test_divwu.cpp  test_mulhw.cpp  test_mulhwu.cpp  test_mulli.cpp  test_mullw.cpp  test_neg.cpp  test_subf.cpp  test_subfc.cpp  test_subfe.cpp  test_subfic.cpp  test_subfme.cpp  test_subfze.cpp
core/tests/branch/: test_branch.cpp
core/tests/float/: test_fabs.cpp  test_fcmpu.cpp  test_fctiw.cpp  test_fctiwz.cpp  test_float_decode_setup.cpp  test_fmr.cpp  test_fneg.cpp  test_frsp.cpp  test_lfd.cpp  test_lfs.cpp  test_stfd.cpp  test_stfs.cpp
core/tests/load/: test_lbz.cpp  test_lbzu.cpp  test_lbzx.cpp  test_lha.cpp  test_lhax.cpp  test_lhz.cpp  test_lhzx.cpp  test_lmw.cpp  test_lwz.cpp  test_lwzu.cpp  test_lwzx.cpp
core/tests/logical/: test_and.cpp  test_andc.cpp  test_andi.cpp  test_andis.cpp  test_cntlzw.cpp  test_eqv.cpp  test_extsb.cpp  test_extsh.cpp  test_nand.cpp  test_nor.cpp  test_or.cpp  test_orc.cpp  test_ori.cpp  test_oris.cpp  test_xor.cpp  test_xori.cpp  test_xoris.cpp
core/tests/shift/: test_cntlzw.cpp  test_extsb.cpp  test_extsh.cpp  test_rlwimi.cpp  test_rlwinm.cpp  test_rlwnm.cpp  test_slw.cpp  test_sraw.cpp  test_srawi.cpp  test_srw.cpp
core/tests/spr/: test_dcbf.cpp  test_dcbst.cpp  test_dcbt.cpp  test_eieio.cpp  test_icbi.cpp  test_mfcr.cpp  test_mfspr.cpp  test_mtcrf.cpp  test_mtspr.cpp  test_sync.cpp
core/tests/store/: test_stb.cpp  test_stbx.cpp  test_sth.cpp  test_sthx.cpp  test_stmw.cpp  test_stw.cpp  test_stwu.cpp  test_stwx.cpp
core/tests/system/: test_sc.cpp
docs/: branch-78-what-was-built.md
greenlight-review/: beta_test_plan.md
gui/: CMakeLists.txt  resources.qrc
gui/qml/: ControllerPreview.qml  GamepadPreview.qml  Main.qml
gui/qml/components/: BindingRow.qml  ControllerButton.qml  ControllerPreview.qml  ControllerStick.qml  DpadButton.qml  GamepadPreview.qml
gui/qml/pages/: IntroSequence.qml  MainMenu.qml  SettingsPage.qml  qmldir
gui/src/: EmulatorWindow.cpp  EmulatorWindow.hpp  main.cpp
gui/src/emulator/: EmulatorLauncher.cpp  EmulatorLauncher.hpp
gui/src/gfx/: VulkanOutputWindow.cpp  VulkanOutputWindow.hpp
gui/src/input/: IInputDevice.hpp  InputManager.cpp  InputManager.hpp  InputProfile.hpp  InputProfileManager.cpp  InputProfileManager.hpp  KeyboardInput.cpp  KeyboardInput.hpp  KeyboardInputDevice.cpp  KeyboardInputDevice.hpp  SDLGamepadInput.cpp  SDLGamepadInput.hpp
src/: firstapp.cpp  firstapp.hpp  main.cpp  window.cpp  window.hpp
vulkan/: CMakeLists.txt  Makefile
vulkan/src/: WemuEngineVulkan.h  WemuEngineVulkan.hpp  buffer.cpp  cleanup.cpp  commandPool.cpp  descriptor.cpp  framebuffers.cpp  graphicsPipelineInit.cpp  image.cpp  instance.cpp  logicalDevice.cpp  main.cpp  pick.cpp  renderPass.cpp  semaphoreAndFence.cpp  shader.cpp  surface.cpp  swapChain.cpp  update.cpp  utils.h  vertex.h  vertex.hpp  wemuEngineVulkan.hpp  window.cpp
vulkan/src/headers/: utils.hpp  vertex.hpp  wemuEngineVulkan.hpp
vulkan/src/shaders/: clean.sh  shader.frag
vulkan/src/tmp/: emulator.cpp  emulator.hpp  macros.hpp  window.cpp
(+29 files in other folders)
